solved overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ main {
   margin-top: 2.5em;
   /*  max-height: 68vh; */
   overflow: auto;
+  overflow-x: hidden;
   position: relative;
   margin-bottom: 4vh;
 }
